--- a/paypal.html
+++ b/paypal.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <style>
       p{text-align:center;}
-      div{display:flex;justify-contents:center;}
+      div{display:flex;justify-content:center;padding-top:2em;transform:scale(1.5)}
     </style>
   </head>
   <body>
