--- a/paypal.html
+++ b/paypal.html
@@ -6,6 +6,7 @@
     <style>
       html{
         bacground:#f4f8fa;
+        color:#4f5050;
       }
       body{
         padding: 4em 16em; 
@@ -35,8 +36,10 @@
   </head>
   <body>
     <div class='wrapper'>
-      <h1>※個人的に開催しているプログラミングサークルにご参加いただいてる方限定でやっております。</h1>
-      <br>
+      <h1>プログラミングサークルのメンバー限定サポート</h1>
+      <p>
+        ※個人的に開催しているプログラミングサークルにご参加いただいてる方限定でやっております。
+      </p>
       <p>
         WEBアプリ制作が行えるレベル感になるまで、概要の説明や学習方法の提案、不明点のサポートをさせていただきます。<br>
         Progateでの学習を主軸として進めていただきます。<br>
