--- a/paypal.html
+++ b/paypal.html
@@ -10,6 +10,7 @@
       }
       body{
         padding: 2em 4em; 
+        overflow:hidden;
       }
       h2{
         color: #4f5050;
@@ -24,7 +25,7 @@
       .wrapper{
         background:#fff;
         text-align:center;
-        padding:30px;
+        padding:2em 3em 5em;
         box-shadow: 0 2px 6px 0 rgba(60,66,87,.01);
       }
       .button{
