--- a/paypal.html
+++ b/paypal.html
@@ -33,6 +33,10 @@
         justify-content:center;
         padding-top:2em;
         transform:scale(1.5);
+        outline:none;
+      }
+      .button *{
+        outline:none;
       }
     </style>
   </head>
