--- a/paypal.html
+++ b/paypal.html
@@ -11,6 +11,7 @@
         padding: 2em 4em; 
         overflow:hidden;
       }
+
       h2{
         color: #4f5050;
         font-size: 32px;
@@ -20,6 +21,11 @@
       p{
         margin-bottom:1em;
         font-size: 15px;
+      }
+      @media screen and (orientation: portrait) {
+        h2,p{
+          font-size: .5em; 
+        }
       }
       .wrapper{
         background:#fff;
