--- a/paypal.html
+++ b/paypal.html
@@ -23,8 +23,11 @@
         font-size: 15px;
       }
       @media screen and (orientation: portrait) {
-        h2,p{
-          font-size: .5em; 
+        h2{
+          font-size: 16px; 
+        }
+        p{
+          font-size: 7.5px; 
         }
       }
       .wrapper{
