--- a/paypal.html
+++ b/paypal.html
@@ -23,12 +23,10 @@
         font-size: 15px;
       }
       @media screen and (orientation: portrait) {
-        h2{
-          font-size: 16px; 
-        }
-        p{
-          font-size: 7.5px; 
-        }
+        body{padding: .5em 1em;}
+        h2{font-size: 16px; }
+        p{font-size: 7.5px;}
+        .wrapper{padding: 1em 3em 4em;}
       }
       .wrapper{
         background:#fff;
