--- a/paypal.html
+++ b/paypal.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>プログラミングサークルのメンバー限定サポート</title>
     <style>
       html{
@@ -12,7 +13,7 @@
         overflow:hidden;
       }
 
-      h2{
+      h1{
         color: #4f5050;
         font-size: 32px;
         line-height: 1.3;
@@ -24,7 +25,7 @@
       }
       @media screen and (orientation: portrait) {
         body{padding: .5em 1em;}
-        h2{font-size: 16px; }
+        h1{font-size: 16px; }
         p{font-size: 7.5px;}
         .wrapper{padding: 1em 3em 4em;}
       }
