--- a/paypal.html
+++ b/paypal.html
@@ -9,7 +9,8 @@
         color:#4f5050;
       }
       body{
-        padding: 2em 4em; 
+        margin: 0;
+        padding: 3em 6em; 
         overflow:hidden;
       }
 
@@ -40,7 +41,7 @@
         outline:none;
       }
       @media screen and (orientation: portrait) {
-        body{padding: .5em 1em;}
+        body{padding: 1em;}
         h1{font-size: 16px; }
         p{font-size: 7.5px;}
         .wrapper{padding: 1em 3em 4em;}
