--- a/learning-method.html
+++ b/learning-method.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title></title>
 	<script src="https://cdn.jsdelivr.net/npm/vue@2.6.0/dist/vue.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="learning-method.css">
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>	
 	<div id="playground">
@@ -458,6 +458,6 @@
 		</div>
 	</div>
 	<style id="sizeAdjust" type="text/css">section{zoom:{{zoom}};}</style>
-	<script src='learning-method.js'></script>
+	<script src='script.js'></script>
 </body>
 </html>
