imgタグのsrc値変更

--- a/learning-method.html
+++ b/learning-method.html
@@ -41,129 +41,112 @@
 			</section>
 
 			<section class="swiper-slide">
-				<h2 class="left">学習方法</h2>
-				<div class="right">
-					プログラミングの学習方法にはどんなものがあるでしょうか？
-					主となる６つの方法がこちらになります。
+				<div class="top">
+					<h2 class="title">学習方法</h2>
+					<div class="text">
+						プログラミングの学習方法にはどんなものがあるでしょうか？<br>
+						主となる６つの方法がこちらになります。
+					</div>
 				</div>
 				<div class="bottom">
-					<div class="hideRight">
-						<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/種類/School ©Wokandapix from Pixabay.jpg">
+					<div class="content">
+						<p class="title">1. 高額プログラミングスクール</p>
+						<img src="/image/種類/School ©Wokandapix from Pixabay.jpg">
 						<p class="copyRight">©Wokandapix from Pixabay</p>
-						<p>1. 高額プログラミングスクール</p>
 					</div>
-					<div class="hideRight">
-						<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/種類/Company ©janeb13 from Pixabay.jpg">
+					<div class="content">
+						<p class="title">2. 就職 <small>（未経験歓迎・研修制度充実企業）</small></p>
+						<img src="/image/種類/Company ©janeb13 from Pixabay.jpg">
 						<p class="copyRight">©janeb13 from Pixabay</p>
-						<p>2. 就職<br>（未経験歓迎・研修制度充実企業）</p>
 					</div>
-					<div class="hideRight">
-						<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/種類/WEB Service ©StockSnap from Pixabay.jpg">
+					<div class="content">
+						<p class="title">3. WEB学習サービス</p>
+						<img src="/image/種類/WEB Service ©StockSnap from Pixabay.jpg">
 						<p class="copyRight">©StockSnap from Pixabay</p>
-						<p>3. WEB学習サービス</p>
 					</div>
-					<div class="hideRight">
-						<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/種類/Community ©StockSnap from Pixabay.jpg">
+					<div class="content">
+						<p class="title">4. コミュニティ</p>
+						<img src="/image/種類/Community ©StockSnap from Pixabay.jpg">
 						<p class="copyRight">©StockSnap from Pixabay</p>
-						<p>4. コミュニティ</p>
 					</div>
 
-					<div class="hideRight">
-						<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/種類/Mentor ©Nicholas Jackson from Pixabay.jpg">
+					<div class="content">
+						<p class="title">5. メンター</p>
+						<img src="/image/種類/Mentor ©Nicholas Jackson from Pixabay.jpg">
 						<p class="copyRight">©Nicholas Jackson from Pixabay</p>
-						<p>5. メンター</p>
 					</div>
-					<div class="hideRight">
-						<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/種類/Blog ©rawpixel from Pixabay.jpg">
+					<div class="content">
+						<p class="title">6. ブログ・まとめサイト</p>
+						<img src="/image/種類/Blog ©rawpixel from Pixabay.jpg">
 						<p class="copyRight">©rawpixel from Pixabay</p>
-						<p>6. ブログ・まとめサイト</p>
 					</div>
 				</div>
 			</section>
 
 			<section class="swiper-slide">
-				<div class="text">
-					<h2>1. 高額プログラミングスクール</h2>
-					<div class="titleImg"><img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/種類/School ©Wokandapix from Pixabay.jpg"><p class="copyRight">©Wokandapix from Pixabay</p></div>
+				<div class="top">
+					<h2 class="title">1. 高額プログラミングスクール</h2>
 					<p>
-						<strong>特徴</strong><br>
-						安心感 ･ 探しやすさ ･ 費用の高さ。<br>
-						<strong>備考</strong><br>
-						就職の斡旋まで行うスクールが多い。<br><br>
+						高額プログラミングスクールの特徴は、その安心感です。<br>
+						プログラミングへの関わりが全くない方も入学しやすい事はメリットですが、<br>
+						カリキュラムや教育制度に対して、学費が高い印象があります。<br>
+						例として下のようなスクールがあります。  ※学費は2019年9月調べ
 					</p>
+				</div>
+				<div class="bottom">
+					<div class="content">
+						<h3 class="title">CodeCamp</h3>
+						<img src="/image/高額スクール/code camp.png">
+						<p class="text">
+							マスターコース  2ヶ月  ¥148,000<br>
+							プレミアムコース  2ヶ月  ¥248,000<br>
+							プレミアムプラスコース  2ヶ月  ¥398,000
+						</p>	
+					</div>
+					<div class="content">
+						<h3 class="title">POTEPAN CAMP</h3>
+						<img src="/image/高額スクール/potepan camp.png">
+						<p class="text">
+							オープンコース  2ヶ月 ¥100,000<br>
+							キャリアコース  3ヶ月 ¥250,000<br>
+							ビギナーコース  4ヶ月 ¥300,000
+						</p>	
+					</div>
 
-					<p class="item1">
-						<div class="items">
-							<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/高額スクール/code camp.png">
-							<p><strong>CodeCamp</strong></p>
-							<p><small>
-								マスターコース<br>
-								2ヶ月  ¥148,000<br>
-								プレミアムコース<br>
-								2ヶ月  ¥248,000<br>
-								プレミアムプラスコース<br>
-								2ヶ月  ¥398,000
-							</small></p>	
-						</div>
-						<div class="items">
-							<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/高額スクール/potepan camp.png">
-							<p><strong>POTEPAN CAMP</strong></p>
-							<p><small>
-								オープンコース<br>
-								2ヶ月 ¥100,000<br>
-								キャリアコース<br>
-								3ヶ月 ¥250,000<br>
-								ビギナーコース<br>
-						        4ヶ月 ¥300,000<br>
-							</small></p>	
-						</div>
-					</p>
-
-					<p class="item2">
-						<div class="items">
-							<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/高額スクール/samurai.png">
-							<p><strong>侍エンジニア塾</strong></p>
-							<p><small>
-								デビューコース<br>
-								1ヶ月 ¥168,000<br>
-						        フリーランスコース<br>
-						        3ヶ月 ¥438,000<br>
-						        ビジネスコース<br>
-						        6ヶ月 ¥698,000
-							</small></p>	
-						</div>
-						<div class="items">
-							<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/高額スクール/tech camp.png">
-							<p><strong>TECH::CAMP</strong></p>
-							<p><small>
-								TECH::CAMP<br>
-								1ヶ月 ¥14,800 + 入会費 ¥148,000<br>
-								TECH::EXPERT (夜間・休日スタイル)<br>
-								6ヶ月 ¥798,000<br>
-								TECH::EXPERT (短期集中スタイル)<br>
-								10週間 ¥598,000
-							</small></p>	
-						</div>
-						<div class="items">
-							<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/高額スクール/webkatsu.png">
-							<p><strong>ウェブカツ</strong></p>
-							<p><small>
-								アスリート部員<br>
-								1ヶ月 ¥43,600 + 入会費 ¥180,000<br>
-								アスリート部員 (完全月額制)<br>
-								1ヶ月 ¥70,600<br>
-								特待生部員<br>
-								6ヶ月 ¥564,000
-							</small></p>	
-						</div>
-					</p>
+					<div class="content">
+						<h3 class="title">侍エンジニア塾</h3>
+						<img src="/image/高額スクール/samurai.png">
+						<p class="text">
+							デビューコース  1ヶ月 ¥168,000<br>
+					        フリーランスコース  3ヶ月 ¥438,000<br>
+					        ビジネスコース  6ヶ月 ¥698,000
+						</p>	
+					</div>
+					<div class="content">
+						<h3 class="title">TECH::CAMP</h3>
+						<img src="/image/高額スクール/tech camp.png">
+						<p class="text">
+							TECH::CAMP  1ヶ月 ¥14,800 + 入会費 ¥148,000<br>
+							TECH::EXPERT (夜間・休日スタイル)  6ヶ月 ¥798,000<br>
+							TECH::EXPERT (短期集中スタイル)  10週間 ¥598,000
+						</p>	
+					</div>
+					<div class="content">
+						<h3 class="title">ウェブカツ</h3>
+						<img src="/image/高額スクール/webkatsu.png">
+						<p class="text">
+							アスリート部員  1ヶ月 ¥43,600 + 入会費 ¥180,000<br>
+							アスリート部員 (完全月額制)  1ヶ月 ¥70,600<br>
+							特待生部員  6ヶ月 ¥564,000
+						</p>	
+					</div>
 				</div>
 			</section>
 
 			<section class="swiper-slide">
 				<div class="text">
 					<h2>2. 就職 <small>（未経験歓迎・研修制度充実企業）</small></h2>
-					<div class="titleImg"><img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/種類/Company ©janeb13 from Pixabay.jpg"><p class="copyRight">©janeb13 from Pixabay</p></div>
+					<div class="titleImg"><img src="/image/種類/Company ©janeb13 from Pixabay.jpg"><p class="copyRight">©janeb13 from Pixabay</p></div>
 					<p>
 						<strong>特徴</strong><br>
 						仕事のためのスキルが確実に身につく。<br>
@@ -182,7 +165,7 @@
 			<section class="swiper-slide">
 				<div class="text">
 					<h2>3. WEB学習サービス</h2>
-					<div class="titleImg"><img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/種類/WEB Service ©StockSnap from Pixabay.jpg"><p class="copyRight">©StockSnap from Pixabay</p></div>
+					<div class="titleImg"><img src="/image/種類/WEB Service ©StockSnap from Pixabay.jpg"><p class="copyRight">©StockSnap from Pixabay</p></div>
 					<p>
 						<strong>特徴</strong><br>
 						コストパフォーマンスが良い。  気軽にはじめられる。  各社、個性的な学習スタイル。<br>
@@ -193,7 +176,7 @@
 
 					<p class="item1">
 						<div class="items">
-							<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/service/progate.png">
+							<img src="/image/service/progate.png">
 							<p>
 								<strong>Progate</strong><br>
 								<small>月額 ¥980<br>
@@ -208,7 +191,7 @@
 							</p>	
 						</div>
 						<div class="items">
-							<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/service/dot install.png">
+							<img src="/image/service/dot install.png">
 							<p>
 								<strong>ドットインストール</strong><br>
 								<small>月額 ¥980<br>
@@ -223,7 +206,7 @@
 							</p>	
 						</div>
 						<div class="items">
-							<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/service/n yobikou.png">
+							<img src="/image/service/n yobikou.png">
 							<p>
 								<strong>N予備校</strong><br>
 								<small>クレジットカード決済 月額 ¥1,000<br>
@@ -241,7 +224,7 @@
 
 					<p class="item2">
 						<div class="items">
-							<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/service/schoo.png">
+							<img src="/image/service/schoo.png">
 							<p>
 								<strong>Schoo</strong><br>
 								<small>WEB登録 月額 ¥980  アプリ登録 月額 ¥1,080<br>
@@ -255,7 +238,7 @@
 							</p>	
 						</div>
 						<div class="items">
-							<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/service/udemy.png">
+							<img src="/image/service/udemy.png">
 							<p>
 								<strong>Udemy</strong><br>
 								<small>講義ごと ¥2,400 ~ ¥24,000</small></p>
@@ -273,30 +256,30 @@
 			<section class="swiper-slide">
 				<div class="text">
 					<h2>4. コミュニティ</h2>
-					<div class="titleImg"><img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/種類/Community ©StockSnap from Pixabay.jpg"><p class="copyRight">©StockSnap from Pixabay</p></div>
+					<div class="titleImg"><img src="/image/種類/Community ©StockSnap from Pixabay.jpg"><p class="copyRight">©StockSnap from Pixabay</p></div>
 					<p class="item3">
 						<p class="logo">
 							<strong> - SNS - </strong><br>
-							<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/コミュニティ/twitter.png">
+							<img src="/image/コミュニティ/twitter.png">
 						</p>
 						<p class="logo">
 							<strong> - Q&A - </strong><br>
-							<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/コミュニティ/teratail.png"><br>
-							<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/コミュニティ/stack-overflow.png">
+							<img src="/image/コミュニティ/teratail.png"><br>
+							<img src="/image/コミュニティ/stack-overflow.png">
 						</p>
 						<p class="logo">
 							<strong> - 情報共有 - </strong><br>
-							<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/コミュニティ/qiita.png">
+							<img src="/image/コミュニティ/qiita.png">
 						</p>
 						<p class="logo">
 							<strong> - 勉強会 - </strong><br>
-							<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/コミュニティ/connpass.png">
+							<img src="/image/コミュニティ/connpass.png">
 						</p>
 					</p>
 					<div class="item4">
 						<p class="logo">
 							<strong> - SNS - </strong><br>
-							<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/コミュニティ/twitter.png">
+							<img src="/image/コミュニティ/twitter.png">
 						</p>
 						<div class="twitterInfo">
 							<p class="hashTag">
@@ -332,18 +315,18 @@
 					<div class="item5">
 						<p class="logo">
 							<strong> - Q&A - </strong><br>
-							<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/コミュニティ/teratail.png"><br>
+							<img src="/image/コミュニティ/teratail.png"><br>
 							<small>
 								  日本のエンジニアが集うQ&Aコミュニティサイト。某Yah○○!知恵袋のエンジニア版。国産サイト。<br>
 							</small>
-							<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/コミュニティ/stack-overflow.png"><br>
+							<img src="/image/コミュニティ/stack-overflow.png"><br>
 							<small>
 								  コンピュータや情報技術、特にプログラミング技術に関するナレッジコミュニティ。海外発のサイト。
 							</small>
 						</p>
 						<p class="logo">
 							<strong> - 情報共有 - </strong><br>
-							<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/コミュニティ/qiita.png"><br>
+							<img src="/image/コミュニティ/qiita.png"><br>
 							<small>
 								  プログラマのための技術情報共有サービス。技術的な事をググると十中八九Qiitaの記事がでてくる。<br>
 						    	  初心者もQiitaアカウントを作って、学習内容をまとめておくと就職に有利などと言われている。
@@ -351,7 +334,7 @@
 						</p>
 						<p class="logo">
 							<strong> - 勉強会 - </strong><br>
-							<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/コミュニティ/connpass.png"><br>
+							<img src="/image/コミュニティ/connpass.png"><br>
 							<small>
 								  エンジニアをつなぐIT勉強会支援プラットフォーム。 <br>
 							      主にエンジニア向けの勉強会やセミナーなどのイベント開催・参加が無料で行える。
@@ -364,7 +347,7 @@
 			<section class="swiper-slide">
 				<div class="text">
 					<h2>5. メンター</h2>
-					<div class="titleImg"><img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/種類/Mentor ©Nicholas Jackson from Pixabay.jpg"><p class="copyRight">©Nicholas Jackson from Pixabay</p></div>
+					<div class="titleImg"><img src="/image/種類/Mentor ©Nicholas Jackson from Pixabay.jpg"><p class="copyRight">©Nicholas Jackson from Pixabay</p></div>
 					<p>
 						<p>
 							<strong>意味</strong><br>
@@ -383,7 +366,7 @@
 							<strong>代表的な関連サービス</strong><br>
 							<div class="item6">
 								<p class="items">
-									<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/メンター/menta.png"><br>
+									<img src="/image/メンター/menta.png"><br>
 									<small>
 										<strong>MENTA</strong><br>
 										<small>相場  単発 ¥1,000 ~ 月額 ¥15,000+α</small><br>
@@ -394,7 +377,7 @@
 									</small>
 								</p>
 								<p class="items">
-									<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/メンター/techme.png"><br>
+									<img src="/image/メンター/techme.png"><br>
 									<small>
 										<strong>TechMe</strong><br>
 										<small>相場  30分 ¥1,500 ~ ¥6,250</small><br>
@@ -414,14 +397,14 @@
 			<section class="swiper-slide">
 				<div class="text">
 					<h2>6. ブログ・参考サイト</h2>
-					<div class="titleImg"><img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/種類/Blog ©rawpixel from Pixabay.jpg"><p class="copyRight">©rawpixel from Pixabay</p></div>
+					<div class="titleImg"><img src="/image/種類/Blog ©rawpixel from Pixabay.jpg"><p class="copyRight">©rawpixel from Pixabay</p></div>
 					<p><small>これだけではどうにもならないが、これが無くてはどうにもならない。<br>
 					なくてはならない存在。いつもお世話になっております。</small></p>
 					<p>
 						<p class="items"><small><strong>代表的な参考サイト</strong></small></p>	
 						<div class="item7">
 							<div class="items">
-								<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/参考サイト/engineer.png"><br>
+								<img src="/image/参考サイト/engineer.png"><br>
 									<p>
 										<strong>エンジニアの入り口</strong><br>
 										<small>CSS/Java/Linux/PHP/<br>
@@ -429,7 +412,7 @@
 									</p>
 							</div>
 							<div class="items">
-								<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/参考サイト/samurai.png"><br>
+								<img src="/image/参考サイト/samurai.png"><br>
 									<p>
 										<strong>侍エンジニア塾ブログ</strong><br>
 										<small>Ruby/Swift/Java/Python/<br>
@@ -437,7 +420,7 @@
 									</p>
 							</div>
 							<div class="items">
-								<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/参考サイト/saruwaka.png"><br>
+								<img src="/image/参考サイト/saruwaka.png"><br>
 									<p>
 										<strong>サルワカ</strong><br>
 										<small>CSS/WEBデザイン/<br>
@@ -448,28 +431,28 @@
 						<p class="items"><small><strong>個人的お気に入りサイト</strong></small></p>	
 							<div class="item8">
 							<div class="items">
-								<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/参考サイト/selector_cheet.png"><br>
+								<img src="/image/参考サイト/selector_cheet.png"><br>
 									<p>
 										<strong>webliker</strong><br>
 										<small>CSSセレクタのチートシート など</small>
 									</p>
 							</div>
 							<div class="items">
-								<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/参考サイト/flex_cheet.png"><br>
+								<img src="/image/参考サイト/flex_cheet.png"><br>
 									<p>
 										<strong>WEBクリエイターボックス</strong><br>
 										<small>Flexboxのチートシート など</small>
 									</p>
 							</div>
 							<div class="items">
-								<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/参考サイト/linuc.png"><br>
+								<img src="/image/参考サイト/linuc.png"><br>
 									<p>
 										<strong>LinuC</strong><br>
 										<small>Linux標準教科書 など</small>
 									</p>
 							</div>
 							<div class="items">
-								<img src="https://h40831.github.io/vue_presentation_engineers_getting_started/photo/参考サイト/it_staffing.png"><br>
+								<img src="/image/参考サイト/it_staffing.png"><br>
 									<p>
 										<strong>IT STAFFING
 										<br>エンジニアスタイル</strong><br>
