学習サービスディレクトリの名前変更

--- a/learning-method.html
+++ b/learning-method.html
@@ -51,33 +51,33 @@
 				<div class="bottom">
 					<div class="content">
 						<p class="title">1. 高額プログラミングスクール</p>
-						<img src="/image/種類/School ©Wokandapix from Pixabay.jpg">
+						<img src="https://h40831.github.io/Hello-Programming/image/種類/School ©Wokandapix from Pixabay.jpg">
 						<p class="copyRight">©Wokandapix from Pixabay</p>
 					</div>
 					<div class="content">
 						<p class="title">2. 就職 <small>（未経験歓迎・研修制度充実企業）</small></p>
-						<img src="/image/種類/Company ©janeb13 from Pixabay.jpg">
+						<img src="https://h40831.github.io/Hello-Programming/image/種類/Company ©janeb13 from Pixabay.jpg">
 						<p class="copyRight">©janeb13 from Pixabay</p>
 					</div>
 					<div class="content">
 						<p class="title">3. WEB学習サービス</p>
-						<img src="/image/種類/WEB Service ©StockSnap from Pixabay.jpg">
+						<img src="https://h40831.github.io/Hello-Programming/image/種類/WEB Service ©StockSnap from Pixabay.jpg">
 						<p class="copyRight">©StockSnap from Pixabay</p>
 					</div>
 					<div class="content">
 						<p class="title">4. コミュニティ</p>
-						<img src="/image/種類/Community ©StockSnap from Pixabay.jpg">
+						<img src="https://h40831.github.io/Hello-Programming/image/種類/Community ©StockSnap from Pixabay.jpg">
 						<p class="copyRight">©StockSnap from Pixabay</p>
 					</div>
 
 					<div class="content">
 						<p class="title">5. メンター</p>
-						<img src="/image/種類/Mentor ©Nicholas Jackson from Pixabay.jpg">
+						<img src="https://h40831.github.io/Hello-Programming/image/種類/Mentor ©Nicholas Jackson from Pixabay.jpg">
 						<p class="copyRight">©Nicholas Jackson from Pixabay</p>
 					</div>
 					<div class="content">
 						<p class="title">6. ブログ・まとめサイト</p>
-						<img src="/image/種類/Blog ©rawpixel from Pixabay.jpg">
+						<img src="https://h40831.github.io/Hello-Programming/image/種類/Blog ©rawpixel from Pixabay.jpg">
 						<p class="copyRight">©rawpixel from Pixabay</p>
 					</div>
 				</div>
@@ -86,7 +86,7 @@
 			<section class="swiper-slide">
 				<div class="top">
 					<h2 class="title">1. 高額プログラミングスクール</h2>
-					<p>
+					<p class="text">
 						高額プログラミングスクールの特徴は、その安心感です。<br>
 						プログラミングへの関わりが全くない方も入学しやすい事はメリットですが、<br>
 						カリキュラムや教育制度に対して、学費が高い印象があります。<br>
@@ -96,7 +96,7 @@
 				<div class="bottom">
 					<div class="content">
 						<h3 class="title">CodeCamp</h3>
-						<img src="/image/高額スクール/code camp.png">
+						<img src="https://h40831.github.io/Hello-Programming/image/高額スクール/code camp.png">
 						<p class="text">
 							マスターコース  2ヶ月  ¥148,000<br>
 							プレミアムコース  2ヶ月  ¥248,000<br>
@@ -105,7 +105,7 @@
 					</div>
 					<div class="content">
 						<h3 class="title">POTEPAN CAMP</h3>
-						<img src="/image/高額スクール/potepan camp.png">
+						<img src="https://h40831.github.io/Hello-Programming/image/高額スクール/potepan camp.png">
 						<p class="text">
 							オープンコース  2ヶ月 ¥100,000<br>
 							キャリアコース  3ヶ月 ¥250,000<br>
@@ -115,7 +115,7 @@
 
 					<div class="content">
 						<h3 class="title">侍エンジニア塾</h3>
-						<img src="/image/高額スクール/samurai.png">
+						<img src="https://h40831.github.io/Hello-Programming/image/高額スクール/samurai.png">
 						<p class="text">
 							デビューコース  1ヶ月 ¥168,000<br>
 					        フリーランスコース  3ヶ月 ¥438,000<br>
@@ -124,7 +124,7 @@
 					</div>
 					<div class="content">
 						<h3 class="title">TECH::CAMP</h3>
-						<img src="/image/高額スクール/tech camp.png">
+						<img src="https://h40831.github.io/Hello-Programming/image/高額スクール/tech camp.png">
 						<p class="text">
 							TECH::CAMP  1ヶ月 ¥14,800 + 入会費 ¥148,000<br>
 							TECH::EXPERT (夜間・休日スタイル)  6ヶ月 ¥798,000<br>
@@ -133,7 +133,7 @@
 					</div>
 					<div class="content">
 						<h3 class="title">ウェブカツ</h3>
-						<img src="/image/高額スクール/webkatsu.png">
+						<img src="https://h40831.github.io/Hello-Programming/image/高額スクール/webkatsu.png">
 						<p class="text">
 							アスリート部員  1ヶ月 ¥43,600 + 入会費 ¥180,000<br>
 							アスリート部員 (完全月額制)  1ヶ月 ¥70,600<br>
@@ -144,142 +144,129 @@
 			</section>
 
 			<section class="swiper-slide">
-				<div class="text">
-					<h2>2. 就職 <small>（未経験歓迎・研修制度充実企業）</small></h2>
-					<div class="titleImg"><img src="/image/種類/Company ©janeb13 from Pixabay.jpg"><p class="copyRight">©janeb13 from Pixabay</p></div>
-					<p>
-						<strong>特徴</strong><br>
-						仕事のためのスキルが確実に身につく。<br>
-						費用がかからない。<br><br>
-						<strong>備考</strong><br>
-						求人の数は少なくないが、かなり薄給。<br>
-						家電量販店や事務仕事などへ派遣されながら、業務時間外で企業が用意したカリキュラムをこなすスタイルが主流。<br>
-						集中学習コースなど用意してある企業もある（無給）。<br><br>
-						<strong>印象</strong><br>
-						ハイリスクなイメージ。<br>
-						新卒のタイミングなど、支出の少ない状況からの就職であれば、選択肢に入るかも。
+				<div class="top">
+					<h2 class="title">2. 就職 <small>（未経験歓迎・研修制度充実企業）</small></h2>
+					<p class="text">
+						未経験歓迎企業へ入社し、研修制度を利用して学ぶ道もあります。<br>
+						仕事のためのスキルが確実に身につくうえに、費用もかかりません。<br>
+						ただしかなり薄給で、企業に対する悪質な噂も目立ちます。<br>
+						家電量販店などに派遣されながら、勤務後に研修を受講するスタイルが主流。<br>
+						ハイリスクですが、新卒など収入の少ない状況から挑戦するならアリなのかもしれません。
 					</p>
+				</div>
+				<div class="bottom">
+					<div class="content"><img src="https://h40831.github.io/Hello-Programming/image/種類/Company ©janeb13 from Pixabay.jpg"><p class="copyRight">©janeb13 from Pixabay</p></div>
+					<p>
 				</div>
 			</section>
 
 			<section class="swiper-slide">
-				<div class="text">
-					<h2>3. WEB学習サービス</h2>
-					<div class="titleImg"><img src="/image/種類/WEB Service ©StockSnap from Pixabay.jpg"><p class="copyRight">©StockSnap from Pixabay</p></div>
-					<p>
-						<strong>特徴</strong><br>
-						コストパフォーマンスが良い。  気軽にはじめられる。  各社、個性的な学習スタイル。<br>
-						<strong>備考</strong><br>
-						基本となる前提知識や、環境構築等について解説されていない場合もある。<br>
-						基本的に一人での学習になるため、自身の相対的なレベル感を把握できない点がデメリット。
+				<div class="top">
+					<h2 class="title">3. WEB学習サービス</h2>
+					<p class="text">
+						最もコストパフォーマンスが良く、気軽にはじめられるのがWEB学習サービスです。<br>
+						各社、個性的な学習スタイルを提供してくれています。<br>
+						基本的に一人での学習になるため、モチベーションの維持が課題となります。<br>
+						相談相手がいないため、ハマるとなかなか先に進めなくなってしまうのが欠点です。<br>
 					</p>
-
-					<p class="item1">
-						<div class="items">
-							<img src="/image/service/progate.png">
-							<p>
-								<strong>Progate</strong><br>
-								<small>月額 ¥980<br>
-								無料範囲あり</small>
-							</p>
-							<p>
-								<strong>特徴</strong><br>
-								スライド講義で説明を受けた後に、<br>
-								実際にコードを書いて学ぶスタイル。<br>
-								入門者向けで、わかりやすさ重視。<br>
-								講義クリアで経験値が溜まりレベルが上がる。
-							</p>	
-						</div>
-						<div class="items">
-							<img src="/image/service/dot install.png">
-							<p>
-								<strong>ドットインストール</strong><br>
-								<small>月額 ¥980<br>
-								無料範囲あり</small></p>
-							<p>
-								<strong>特徴</strong><br>
-								3分動画学習サービス。<br>
-								PC画面のみのシンプルな動画が多い。<br>
-								初心者向けを謳っており、利用者数が多い。<br>
-								音声の文字起こし機能、<br>
-								ソースコード閲覧機能などもある。
-							</p>	
-						</div>
-						<div class="items">
-							<img src="/image/service/n yobikou.png">
-							<p>
-								<strong>N予備校</strong><br>
-								<small>クレジットカード決済 月額 ¥1,000<br>
-								iTunes Store決済 月額 ¥1,300<br>
-								無料範囲あり</small></p>
-							<p>
-								<strong>特徴</strong><br>
-								テキストに沿って学ぶスタイル。<br>
-								他サービスと比べ、学習内容が体系的。<br>
-								内容、UIともに、気軽さよりも堅実さ重視。<br>
-								手堅く学びたい人向き。
-							</p>	
-						</div>
-					</p>
-
-					<p class="item2">
-						<div class="items">
-							<img src="/image/service/schoo.png">
-							<p>
-								<strong>Schoo</strong><br>
-								<small>WEB登録 月額 ¥980  アプリ登録 月額 ¥1,080<br>
-								プレミアムプラス学生 ¥1,980  1年契約で2ヶ月無料</small></p>
-							<p>
-								<strong>特徴</strong><br>
-								講義動画で学ぶスタイル。<br>
-								ドットインストールと違い、<br>
-								こちらは実際の講義のような視点の動画。<br>
-						        講義の質は、講師の質にも左右される。
-							</p>	
-						</div>
-						<div class="items">
-							<img src="/image/service/udemy.png">
-							<p>
-								<strong>Udemy</strong><br>
-								<small>講義ごと ¥2,400 ~ ¥24,000</small></p>
-							<p>
-								<strong>特徴</strong><br>
-								買い切り方式のサービス。<br>
-						        プロが作成した講義（資料）を購入できる。<br>
-						        セールで安くなるタイミングが狙い目。
-							</p>	
-						</div>
-					</p>
+				</div>
+				<div class="bottom">
+					<div class="content">
+						<img src="https://h40831.github.io/Hello-Programming/image/サービス/progate.png">
+						<p>
+							<strong>Progate</strong><br>
+							<small>月額 ¥980  無料範囲あり</small>
+						</p>
+						<p>
+							<strong>特徴</strong><br>
+							スライド講義で説明を受けた後に、<br>
+							実際にコードを書いて学ぶスタイル。<br>
+							入門者向けで、わかりやすさ重視。<br>
+							講義クリアで経験値が溜まりレベルが上がる。
+						</p>	
+					</div>
+					<div class="content">
+						<img src="https://h40831.github.io/Hello-Programming/image/サービス/dot install.png">
+						<p>
+							<strong>ドットインストール</strong><br>
+							<small>月額 ¥980  無料範囲あり</small></p>
+						<p>
+							<strong>特徴</strong><br>
+							3分動画学習サービス。<br>
+							PC画面のみのシンプルな動画が多い。<br>
+							初心者向けを謳っており、利用者数が多い。<br>
+							音声の文字起こし機能、<br>
+							ソースコード閲覧機能などもある。
+						</p>	
+					</div>
+					<div class="content">
+						<img src="https://h40831.github.io/Hello-Programming/image/サービス/n yobikou.png">
+						<p>
+							<strong>N予備校</strong><br>
+							<small>クレジットカード決済で  月額 ¥1,000  無料範囲あり</small></p>
+						<p>
+							<strong>特徴</strong><br>
+							テキストに沿って学ぶスタイル。<br>
+							他サービスと比べ、学習内容が体系的。<br>
+							内容、UIともに、気軽さよりも堅実さ重視。<br>
+							手堅く学びたい人向き。
+						</p>	
+					</div>
+					<div class="content">
+						<img src="https://h40831.github.io/Hello-Programming/image/サービス/schoo.png">
+						<p>
+							<strong>Schoo</strong><br>
+							<small>WEB登録で 月額 ¥980  1年契約で2ヶ月無料</small></p>
+						<p>
+							<strong>特徴</strong><br>
+							講義動画で学ぶスタイル。<br>
+							ドットインストールと違い、<br>
+							こちらは実際の講義のような視点の動画。<br>
+					        講義の質は、講師の質にも左右される。
+						</p>	
+					</div>
+					<div class="content">
+						<img src="https://h40831.github.io/Hello-Programming/image/サービス/udemy.png">
+						<p>
+							<strong>Udemy</strong><br>
+							<small>講義ごと ¥2,400 ~ ¥24,000</small></p>
+						<p>
+							<strong>特徴</strong><br>
+							買い切り方式のサービス。<br>
+					        プロが作成した講義（資料）を購入できる。<br>
+					        セールで安くなるタイミングが狙い目。
+						</p>	
+					</div>
 				</div>
 			</section>
 
 			<section class="swiper-slide">
 				<div class="text">
 					<h2>4. コミュニティ</h2>
-					<div class="titleImg"><img src="/image/種類/Community ©StockSnap from Pixabay.jpg"><p class="copyRight">©StockSnap from Pixabay</p></div>
+					<div class="titleImg"><img src="https://h40831.github.io/Hello-Programming/image/種類/Community ©StockSnap from Pixabay.jpg"><p class="copyRight">©StockSnap from Pixabay</p></div>
 					<p class="item3">
 						<p class="logo">
 							<strong> - SNS - </strong><br>
-							<img src="/image/コミュニティ/twitter.png">
+							<img src="https://h40831.github.io/Hello-Programming/image/コミュニティ/twitter.png">
 						</p>
 						<p class="logo">
 							<strong> - Q&A - </strong><br>
-							<img src="/image/コミュニティ/teratail.png"><br>
-							<img src="/image/コミュニティ/stack-overflow.png">
+							<img src="https://h40831.github.io/Hello-Programming/image/コミュニティ/teratail.png"><br>
+							<img src="https://h40831.github.io/Hello-Programming/image/コミュニティ/stack-overflow.png">
 						</p>
 						<p class="logo">
 							<strong> - 情報共有 - </strong><br>
-							<img src="/image/コミュニティ/qiita.png">
+							<img src="https://h40831.github.io/Hello-Programming/image/コミュニティ/qiita.png">
 						</p>
 						<p class="logo">
 							<strong> - 勉強会 - </strong><br>
-							<img src="/image/コミュニティ/connpass.png">
+							<img src="https://h40831.github.io/Hello-Programming/image/コミュニティ/connpass.png">
 						</p>
 					</p>
 					<div class="item4">
 						<p class="logo">
 							<strong> - SNS - </strong><br>
-							<img src="/image/コミュニティ/twitter.png">
+							<img src="https://h40831.github.io/Hello-Programming/image/コミュニティ/twitter.png">
 						</p>
 						<div class="twitterInfo">
 							<p class="hashTag">
@@ -315,18 +302,18 @@
 					<div class="item5">
 						<p class="logo">
 							<strong> - Q&A - </strong><br>
-							<img src="/image/コミュニティ/teratail.png"><br>
+							<img src="https://h40831.github.io/Hello-Programming/image/コミュニティ/teratail.png"><br>
 							<small>
 								  日本のエンジニアが集うQ&Aコミュニティサイト。某Yah○○!知恵袋のエンジニア版。国産サイト。<br>
 							</small>
-							<img src="/image/コミュニティ/stack-overflow.png"><br>
+							<img src="https://h40831.github.io/Hello-Programming/image/コミュニティ/stack-overflow.png"><br>
 							<small>
 								  コンピュータや情報技術、特にプログラミング技術に関するナレッジコミュニティ。海外発のサイト。
 							</small>
 						</p>
 						<p class="logo">
 							<strong> - 情報共有 - </strong><br>
-							<img src="/image/コミュニティ/qiita.png"><br>
+							<img src="https://h40831.github.io/Hello-Programming/image/コミュニティ/qiita.png"><br>
 							<small>
 								  プログラマのための技術情報共有サービス。技術的な事をググると十中八九Qiitaの記事がでてくる。<br>
 						    	  初心者もQiitaアカウントを作って、学習内容をまとめておくと就職に有利などと言われている。
@@ -334,7 +321,7 @@
 						</p>
 						<p class="logo">
 							<strong> - 勉強会 - </strong><br>
-							<img src="/image/コミュニティ/connpass.png"><br>
+							<img src="https://h40831.github.io/Hello-Programming/image/コミュニティ/connpass.png"><br>
 							<small>
 								  エンジニアをつなぐIT勉強会支援プラットフォーム。 <br>
 							      主にエンジニア向けの勉強会やセミナーなどのイベント開催・参加が無料で行える。
@@ -347,7 +334,7 @@
 			<section class="swiper-slide">
 				<div class="text">
 					<h2>5. メンター</h2>
-					<div class="titleImg"><img src="/image/種類/Mentor ©Nicholas Jackson from Pixabay.jpg"><p class="copyRight">©Nicholas Jackson from Pixabay</p></div>
+					<div class="titleImg"><img src="https://h40831.github.io/Hello-Programming/image/種類/Mentor ©Nicholas Jackson from Pixabay.jpg"><p class="copyRight">©Nicholas Jackson from Pixabay</p></div>
 					<p>
 						<p>
 							<strong>意味</strong><br>
@@ -366,7 +353,7 @@
 							<strong>代表的な関連サービス</strong><br>
 							<div class="item6">
 								<p class="items">
-									<img src="/image/メンター/menta.png"><br>
+									<img src="https://h40831.github.io/Hello-Programming/image/メンター/menta.png"><br>
 									<small>
 										<strong>MENTA</strong><br>
 										<small>相場  単発 ¥1,000 ~ 月額 ¥15,000+α</small><br>
@@ -377,7 +364,7 @@
 									</small>
 								</p>
 								<p class="items">
-									<img src="/image/メンター/techme.png"><br>
+									<img src="https://h40831.github.io/Hello-Programming/image/メンター/techme.png"><br>
 									<small>
 										<strong>TechMe</strong><br>
 										<small>相場  30分 ¥1,500 ~ ¥6,250</small><br>
@@ -397,14 +384,14 @@
 			<section class="swiper-slide">
 				<div class="text">
 					<h2>6. ブログ・参考サイト</h2>
-					<div class="titleImg"><img src="/image/種類/Blog ©rawpixel from Pixabay.jpg"><p class="copyRight">©rawpixel from Pixabay</p></div>
+					<div class="titleImg"><img src="https://h40831.github.io/Hello-Programming/image/種類/Blog ©rawpixel from Pixabay.jpg"><p class="copyRight">©rawpixel from Pixabay</p></div>
 					<p><small>これだけではどうにもならないが、これが無くてはどうにもならない。<br>
 					なくてはならない存在。いつもお世話になっております。</small></p>
 					<p>
 						<p class="items"><small><strong>代表的な参考サイト</strong></small></p>	
 						<div class="item7">
 							<div class="items">
-								<img src="/image/参考サイト/engineer.png"><br>
+								<img src="https://h40831.github.io/Hello-Programming/image/参考サイト/engineer.png"><br>
 									<p>
 										<strong>エンジニアの入り口</strong><br>
 										<small>CSS/Java/Linux/PHP/<br>
@@ -412,7 +399,7 @@
 									</p>
 							</div>
 							<div class="items">
-								<img src="/image/参考サイト/samurai.png"><br>
+								<img src="https://h40831.github.io/Hello-Programming/image/参考サイト/samurai.png"><br>
 									<p>
 										<strong>侍エンジニア塾ブログ</strong><br>
 										<small>Ruby/Swift/Java/Python/<br>
@@ -420,7 +407,7 @@
 									</p>
 							</div>
 							<div class="items">
-								<img src="/image/参考サイト/saruwaka.png"><br>
+								<img src="https://h40831.github.io/Hello-Programming/image/参考サイト/saruwaka.png"><br>
 									<p>
 										<strong>サルワカ</strong><br>
 										<small>CSS/WEBデザイン/<br>
@@ -431,28 +418,28 @@
 						<p class="items"><small><strong>個人的お気に入りサイト</strong></small></p>	
 							<div class="item8">
 							<div class="items">
-								<img src="/image/参考サイト/selector_cheet.png"><br>
+								<img src="https://h40831.github.io/Hello-Programming/image/参考サイト/selector_cheet.png"><br>
 									<p>
 										<strong>webliker</strong><br>
 										<small>CSSセレクタのチートシート など</small>
 									</p>
 							</div>
 							<div class="items">
-								<img src="/image/参考サイト/flex_cheet.png"><br>
+								<img src="https://h40831.github.io/Hello-Programming/image/参考サイト/flex_cheet.png"><br>
 									<p>
 										<strong>WEBクリエイターボックス</strong><br>
 										<small>Flexboxのチートシート など</small>
 									</p>
 							</div>
 							<div class="items">
-								<img src="/image/参考サイト/linuc.png"><br>
+								<img src="https://h40831.github.io/Hello-Programming/image/参考サイト/linuc.png"><br>
 									<p>
 										<strong>LinuC</strong><br>
 										<small>Linux標準教科書 など</small>
 									</p>
 							</div>
 							<div class="items">
-								<img src="/image/参考サイト/it_staffing.png"><br>
+								<img src="https://h40831.github.io/Hello-Programming/image/参考サイト/it_staffing.png"><br>
 									<p>
 										<strong>IT STAFFING
 										<br>エンジニアスタイル</strong><br>
